--- a/src/components/service.html
+++ b/src/components/service.html
@@ -4,7 +4,7 @@
   >
     Dịch Vụ Chữa Bệnh Đông Y
   </h2>
-
+  <p class="border-b-2 mx-auto border-yellow-300 w-64 mb-6"></p>
   <div class="grid md:grid-cols-3 lg:grid-cols-4 gap-6" id="service-grid">
     <!-- Service 1 -->
     <div
@@ -205,13 +205,13 @@
   <div class="text-center mt-4">
     <button
       id="show-more-btn"
-      class="bg-green-600 text-white px-4 py-2 rounded-md"
+      class="bg-green-600 text-white px-4 py-2 rounded-md cursor-pointer"
     >
       Xem Thêm
     </button>
     <button
       id="hide-btn"
-      class="bg-gray-600 text-white px-4 py-2 rounded-md hidden mt-2"
+      class="bg-gray-600 text-white px-4 py-2 rounded-md hidden mt-2 cursor-pointer"
     >
       Ẩn Bớt
     </button>
@@ -219,17 +219,19 @@
 </section>
 
 <style>
-  /* Thêm CSS để ẩn các phần tử ban đầu */
   .hidden {
     display: none;
   }
 </style>
 
-<section class="py-12 bg-green-50">
-  <h2 class="text-center text-2xl md:text-3xl font-bold text-green-600 mb-8">
+<section class="py-12" data-aos="fade-up">
+  <h2
+    class="text-center text-2xl md:text-3xl font-bold text-green-600 mb-8 bg-green-50 p-6"
+  >
     KHÁCH HÀNG NÓI GÌ VỀ DỊCH VỤ CỦA CHÚNG TÔI?
   </h2>
-
+</h2>
+<p class="border-b-2 mx-auto border-yellow-300 w-64 mb-6"></p>
   <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 px-6">
     <!-- Testimonial 1 -->
     <div
@@ -239,7 +241,7 @@
         class="w-36 h-36 mx-auto bg-gray-300 flex items-center justify-center mb-4"
       >
         <img
-          src="../../assets/images/avatar1.jpg"
+          src="../../assets/images/khach-hang-2.png"
           alt="Khách hàng A"
           class="w-full h-full object-cover rounded-lg"
           Hình
@@ -267,7 +269,7 @@
         class="w-36 h-36 mx-auto bg-gray-300 flex items-center justify-center mb-4"
       >
         <img
-          src="../../assets/images/avatar2.jpg"
+          src="../../assets/images/khach-hang-1.png"
           alt="Khách hàng B"
           class="w-full h-full object-cover rounded-lg"
           Hình
@@ -295,16 +297,9 @@
         class="w-36 h-36 mx-auto bg-gray-300 flex items-center justify-center mb-4"
       >
         <img
-          src="../../assets/images/avatar3.jpg"
+          src="../../assets/images/khach-hang-3.png"
           alt="Khách hàng C"
           class="w-full h-full object-cover rounded-lg"
-          Hình
-          ảnh
-          vuông
-          với
-          góc
-          bo
-          tròn
         />
       </div>
       <p class="text-gray-700 italic mb-4">
